--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -54,6 +54,7 @@
         <a href="{% url 'signup' %}" class="btn primary">Register Now</a>
       {% endif %}
       <a href="{% url 'submit' %}" class="btn outline">Submit Abstract</a>
+      <a href="{% url 'visitor_register' %}" class="btn outline">Visitor Registration</a>
     </div>
   </div>
 </main>
