--- a/conference/templates/conference/visitors_payment.html
+++ b/conference/templates/conference/visitors_payment.html
@@ -29,6 +29,7 @@
         <li>{{ name }}</li>
     {% endfor %}
     </ul>
+<p> AFTER COMPLETION OF THE PAYMENT. PLEASE  SEND SCREENSHOT OR PROOF OF PAYMENT (screenshot, transaction id) TO: ibsscconf@gmail.com.  </p>
 
 
   <p>If you have any questions, feel free to reach out to us at <a href="mailto:ibsscconf@gmail.com">ibsscconf@gmail.com</a>.</p>
