--- a/conference/templates/conference/payment_summary.html
+++ b/conference/templates/conference/payment_summary.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Payment Summary</title>
+  <p> REGISTRATION FEE ONCE PAID IS NOT REFUNDABLE</p>
   <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
   <style>
     .container {
