--- a/conference/templates/conference/itinerary.html
+++ b/conference/templates/conference/itinerary.html
@@ -22,7 +22,7 @@
           <li><a href="{% url 'profile' %}">My Profile</a></li>
           <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
-          <li><a href="{% url 'signup' %}">Register</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
           <li><a href="{% url 'login' %}">Login</a></li>
         {% endif %}
       </ul>
