--- a/conference/templates/conference/signup.html
+++ b/conference/templates/conference/signup.html
@@ -21,7 +21,7 @@
       <a href="{% url 'profile' %}">My Profile</a>
       <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-      <a href="{% url 'signup' %}"class="active">Register</a>
+      <a href="{% url 'signup' %}"class="active">Sign Up</a>
       <a href="{% url 'login' %}">Login</a>
     {% endif %}
   </nav>
