--- a/conference/templates/conference/abstract_approved.html
+++ b/conference/templates/conference/abstract_approved.html
@@ -28,6 +28,19 @@ Note: If there are multiple authors in the paper, each author's payment is to be
         https://chat.whatsapp.com/CPEaa6ek2ur0q6vL7nHJGT
       </a>
     </p>
+    <p>You can make the payment and complete your registration by logging into your profile at the link below:
+
+👉 https://ibsscconf-site.onrender.com/profile/
+
+Please note:
+
+Seats for offline presentations are limited, and will be allocated on a first-come, first-served basis.
+
+We encourage you to register at the earliest to secure your preferred presentation mode.
+
+If you have any questions or face any difficulties during the registration process, please feel free to contact the Technical Coordinator directly at 📞 +91-8099142522.
+
+IMPORTANT NOTE: When Travelling to Bhutan, Original Copy of Voter Id Card or Passport is to be carried for verification of border patrol authorities. In case of failure to provide the necessary id proof at the border checkpoint, the conference management is not responsible.</p>
 
     <p>Regards,<br>IBSSC Secretariat</p>
   </body>
