--- a/conference/templates/conference/checkout.html
+++ b/conference/templates/conference/checkout.html
@@ -53,7 +53,7 @@
         </select>
 
         <div class="proof-wrapper">
-          <label>Upload Identity Proof:</label>
+          <label>Upload Identity Proof (voter id/ passport):</label>
           <input type="file" name="author_identity_proof" accept=".pdf,.jpg,.jpeg,.png">
         </div>
       </section>
@@ -95,7 +95,7 @@
         </select>
 
         <div class="proof-wrapper">
-          <label>Upload Identity Proof: (Voter I card/ passport accepted)</label>
+          <label>Upload Identity Proof: (Voter Id card/ passport accepted)</label>
           <input type="file" name="coauthor_proof_{{ forloop.counter0 }}" accept=".pdf,.jpg,.jpeg,.png">
         </div>
       </div>
