--- a/conference/templates/payment_receipt.html
+++ b/conference/templates/payment_receipt.html
@@ -21,7 +21,7 @@
 <body>
   <div class="container">
     <h2>INDO-BHUTAN SOCIAL SCIENCE CONFERENCE</h2>
-    <h2 class="header">payment Receipt – IBSSC 2025</h2>
+    <h2 class="header">Payment Receipt – IBSSC 2025</h2>
     <p>Dear {{ name }},</p>
 
     <h4>Registration Details</h4>
