--- a/conference/templates/payment_receipt.html
+++ b/conference/templates/payment_receipt.html
@@ -86,6 +86,7 @@
 
     <div class="note">
       <p><em>This is a computer‑generated receipt and requires no signature.</em></p>
+      <p><em>The final amount of money recived by us is subject to realisation of funds paid by you. This email is an acknowledgement only for registration confirmation.</em></p>
     </div>
       <div class="note">
       <p><em>registration fees once paid is not refundable.</em></p>
