--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -59,7 +59,7 @@
   </div>
 </main>
 
-<footer>© 2025 Assam University Silchar | All Rights Reserved</footer>
+<footer>Disclaimer: The Hospitality, Transportation Fooding, Lodging and other necessary arrangement in Bhutan including Border Transfer rests under the supervision of Local Organising Secretary of Bhutan. Assam University is responsible for Academic Aspects of the Conference.</footer>
 
 <button class="floating-toggle" id="theme-toggle" title="Toggle Theme">🌙</button>
 <script src="{% static 'js/script.js' %}"></script>
