--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -45,7 +45,7 @@
       <div><span id="hours">00</span><small>Hours</small></div>
       <div><span id="minutes">00</span><small>Minutes</small></div>
     </div>
-    <p class="countdown-label">Till the abstract submission closes </p>
+    <p class="countdown-label">Offline Paper Submissions Limit Exceeded. Now onwards Abstract Submission for only Online Presentation shall be considered. Sorry for Inconvenience if any.</p>
 
     <div class="cta-buttons">
       {% if user.is_authenticated %}
