--- a/conference/templates/conference/abstract_submit.html
+++ b/conference/templates/conference/abstract_submit.html
@@ -58,7 +58,7 @@
       <select name="institute" id="institute-select" required>
         <option value="">-- Select --</option>
         <option value="Assam University, Silchar">Assam University, Silchar</option>
-        <option value="ROYAL THIMPHU COLLEGE, BHUTAN">ROYAL THIMPHU COLLEGE, BHUTAN</option>
+        <option value="ROYAL THIMPHU COLLEGE, BHUTAN">ASSAM UNIVERSITY AFFILATED INSTITUTE</option>
         <option value="Others">Other</option>
       </select>
 
