--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -18,7 +18,6 @@
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
     <li><a href="{% url 'itinerary' %}">Itinerary</a></li>    
-    <li><a href="{% url 'submit' %}">Submit</a></li>
     <li><a href="{% url 'pricing' %}">Pricing</a></li>
     {% if user.is_authenticated %}
       <li><a href="{% url 'profile' %}">My Profile</a></li>
@@ -36,7 +35,7 @@
     <h1>INDO-BHUTAN SOCIAL SCIENCE  CONFERENCE</h1>
     <p>Department of Business Administration,<br>Assam University Silchar</p>
     <p class="date">03 -06 September, 2025</p>
-    <p class="date">Venue: Royal Timphu College, Bhutan</p>
+    <p class="date">Venue: Bhutan</p>
 
     <div class="countdown" id="countdown">
       <div><span id="days">00</span><small>Days</small></div>
@@ -44,16 +43,6 @@
       <div><span id="minutes">00</span><small>Minutes</small></div>
     </div>
     <p class="countdown-label">Offline Paper Submissions Limit Exceeded. Now onwards Abstract Submission for only Online Presentation shall be considered. Sorry for Inconvenience if any.</p>
-
-    <div class="cta-buttons">
-      {% if user.is_authenticated %}
-        <a href="{% url 'profile' %}" class="btn primary">My Profile</a>
-      {% else %}
-        <a href="{% url 'signup' %}" class="btn primary">Sign Up</a>
-      {% endif %}
-      <a href="{% url 'submit' %}" class="btn outline">Submit Abstract</a>
-      <a href="{% url 'visitor_registration' %}" class="btn outline">Visitor Registration</a>
-    </div>
   </div>
 </main>
 
