--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -35,7 +35,11 @@
     <h1>INDO-BHUTAN SOCIAL SCIENCE  CONFERENCE</h1>
     <p>Department of Business Administration,<br>Assam University Silchar</p>
     <p class="date">03 -06 September, 2025</p>
-    <p class="date">Venue: Bhutan</p>
+    <p>in Academic Collaboration with</p>
+    <p> Paro College of Education, Royal University of Bhutan</p>
+    <p>in Association with,<br>Silchar Management Association.</p>
+    
+    <p class="date">Venue: Paro College of Education, Paro, Bhutan</p>
 
     <div class="countdown" id="countdown">
       <div><span id="days">00</span><small>Days</small></div>
