--- a/conference/templates/conference/about.html
+++ b/conference/templates/conference/about.html
@@ -143,6 +143,17 @@ Dima Hasao
  academic endeavour.</p>
     </section>
 
+
+    <section>
+      <h2>ABOUT PARO COLLEGE OF EDUCATION</h2>
+      <p>Paro College of Education is a constituent College of Royal University of Bhutan. Built on the lap of the stunningly beautiful and treasurable Rimpung Dzong, it was established on 4th November 1975 as a pre-school care teacher training centre (TTC), in the current Rinpung campus in Paro, a place known for its rich history, culture and Buddhist heritage. Its founding as a premier teacher training establishment symbolized the Royal Government of Bhutan’s commitment and effort to develop a self-reliant and sustainable education system for the kingdom.Today the College offers diploma, undergraduate, postgraduate and Masters programmes in the high priority areas of early childcare and development, primary education, secondary education in Dzongkha the national language, health and physical education, inclusive education, and educational leadership studies.</p>
+    </section>
+    <section>
+      <h2>ABOUT Silchar Management Education</h2>
+      <p>The Silchar Management Association (SMA) is a key organization in Silchar, Assam, focused on promoting management practices and entrepreneurship in the region. It's known for its "Start-Up Star" program, designed to encourage young individuals to develop and showcase innovative business ideas. The SMA also facilitates networking and knowledge sharing among managers and entrepreneurs.</p>
+    </section>
+    
+
     <section>
       <h2>ABOUT THE DEPARTMENT</h2>
       <p> The Department of Business Admininis-tration (DBA) an AICTE approved
