--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -47,6 +47,13 @@
       <div><span id="minutes">00</span><small>Minutes</small></div>
     </div>
     <p class="countdown-label">Offline Paper Submissions Limit Exceeded. Now onwards Abstract Submission for only Online Presentation shall be considered. Sorry for Inconvenience if any.</p>
+    <div class="cta-buttons">
+      {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}" class="btn primary">My Profile</a>
+      {% else %}
+        <a href="{% url 'login' %}" class="btn primary">Login</a>
+      {% endif %}
+    </div>    
   </div>
 </main>
 
