--- a/conference/templates/conference/profile.html
+++ b/conference/templates/conference/profile.html
@@ -86,9 +86,9 @@
                     {# 1) never checked out -> Make Payment #}
                     {% with fr=submission.finalregistration %}
                       {% if not fr %}
-                        <a href="{% url 'checkout' submission.paper_id %}" class="pay-button">Make Payment</a>
+                        <a href="#" class="pay-button">Payment Closed</a>
                       {% elif not fr.transaction_id %}
-                        <a href="{% url 'payment_summary' submission.paper_id %}" class="pay-button">Continue Payment</a>
+                        <a href="#" class="pay-button">Payment Closed</a>
                       {% elif not fr.payment_verified %}
                         <span class="under-approval">⏳ Under Approval</span>
                       {% else %}
